<resources>
    <string name="app_name">Color</string>
    <string name="app_full_name">Material Design Color</string>
    <string name="app_designed_by">Designed by Eajy in China</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="nav_explain">About Color</string>
    <string name="nav_website">Material Color Website</string>
    <string name="nav_my_apps">My Apps</string>
    <string name="nav_about">About</string>
    <string name="nav_donate">Donations</string>
    <string name="main_feedback_email">Feedback:MaterialDesignColor</string>
    <string name="main_not_found_email">Not found email app</string>
    <string name="guide_swipe">Swipe to see more</string>

    <string name="nav_red">Red</string>
    <string name="nav_pink">Pink</string>
    <string name="nav_purple">Purple</string>
    <string name="nav_deep_purple">Deep Purple</string>
    <string name="nav_indigo">Indigo</string>
    <string name="nav_blue">Blue</string>
    <string name="nav_light_blue">Light Blue</string>
    <string name="nav_cyan">Cyan</string>
    <string name="nav_teal">Teal</string>
    <string name="nav_green">Green</string>
    <string name="nav_light_green">Light Green</string>
    <string name="nav_lime">Lime</string>
    <string name="nav_yellow">Yellow</string>
    <string name="nav_amber">Amber</string>
    <string name="nav_orange">Orange</string>
    <string name="nav_deep_orange">Deep Orange</string>
    <string name="nav_brown">Brown</string>
    <string name="nav_grey">Grey</string>
    <string name="nav_blue_grey">Blue Grey</string>

    <string name="copy_before">Copied \"</string>
    <string name="copy_after">\" to clipboard</string>
    <string name="copy_guide">Long press to copy the color value to clipboard</string>
    <string name="copy_ok">Got it</string>

    <!-- String related to About Color -->
    <string name="explain_color">Color</string>
    <string name="explain_color_details">Color in material design is inspired by bold hues juxtaposed with muted environments, deep shadows, and bright highlights.</string>
    <string name="explain_color_palette">Color Palette</string>
    <string name="explain_color_palette_details">This color palette comprises primary and accent colors that can be used for illustration or to develop your brand colors.
        They’ve been designed to work harmoniously with each other. The color palette starts with primary colors and fills in the spectrum to create a complete and usable palette for Android, Web, and iOS.
        Google suggests using the 500 colors as the primary colors in your app and the other colors as accents colors.\n\nThemes enable consistent app styling through surface shades, shadow depth, and ink opacity.</string>
    <string name="explain_btn">Material Color Website</string>

    <!-- String related to About -->
    <string name="title_activity_about">About</string>
    <string name="about_version">Version: </string>
    <string name="about_email_intent">About:MaterialDesignColor</string>
    <string name="about_not_found_email">Not found email app</string>
    <string name="about_card1_message">Hey, glad to see you!</string>
    <string name="about_card2_title">If you liked the app, feel free to contact me.</string>
    <string name="about_google_play">Rate on Google play</string>
    <string name="about_email">Feedback by E-mail</string>
    <string name="about_git_hub">Source code on GitHub</string>
    <string name="about_address">Beijing, China</string>
    <string name="about_website">View my website</string>
    <string name="web_view_menu">Open in browser</string>
    <string name="about_source_licenses">Open source licenses</string>
    <string name="share_with">Share with</string>
    <string name="dialog_close">Close</string>

    <!-- String related to Donate -->
    <string name="activity_donate">Donations</string>
    <string name="donate">Donate</string>
    <string name="donated">Donated</string>
    <string name="donate_title">I Would Be Very Grateful If You Could Donate Me ! </string>
    <string name="donate_title_after">Thanks For Your Donations, I Am Very Grateful ! </string>
    <string name="donate_low">1.99 USD</string>
    <string name="donate_high">9.99 USD</string>
    <string name="donate_exception">Sorry, can not do this!</string>

    <!-- String related to Ad -->
    <string name="banner_ad_loading">Ads loading …</string>
    <string name="banner_ad_unit_id_donate" translatable="false">ca-app-pub-1251484082745159/7804400621</string>

    <!-- String related to app short cuts -->
    <string name="shortcut_label_about_color">About Color</string>
    <string name="shortcut_label_about">About</string>

    <!-- String related to My Apps -->
    <string name="activity_my_apps">My Apps</string>
</resources>
